scalalib/src/test/resource/acyclic/src/test/resources/success/dag/D.scala
package success.dag

class D {
  val b: A = null
  val c = C
}
