scalalib/src/test/resource/acyclic/src/test/resources/fail/halfpackagecycle/c/C2.scala
package fail.halfpackagecycle
package c

class C2 {
  lazy val b = new B
}
